# ChangeLog for net-analyzer/pmacct
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/pmacct/ChangeLog,v 1.96 2014/08/05 16:36:59 jer Exp $

  05 Aug 2014; Jeroen Roovers <jer@gentoo.org> pmacct-1.5.0_rc3.ebuild,
  +files/pmacct-1.5.0_rc3-mongodb.patch:
  Add support for newer versions of dev-libs/mongo-c-driver (bug #518624).

  16 Jul 2014; Jeroen Roovers <jer@gentoo.org> -pmacct-1.5.0_rc2.ebuild,
  metadata.xml:
  Remove short <longdescription>.

*pmacct-1.5.0_rc3 (13 May 2014)

  13 May 2014; Jeroen Roovers <jer@gentoo.org> +pmacct-1.5.0_rc3.ebuild:
  Version bump by Tony Vroon (bug #510212).

  05 Apr 2014; Jeroen Roovers <jer@gentoo.org> pmacct-1.5.0_rc2.ebuild:
  Bump dev-libs/mongo-c-driver dependency (bug #506738).

*pmacct-1.5.0_rc2 (01 Feb 2014)

  01 Feb 2014; Jeroen Roovers <jer@gentoo.org> +pmacct-1.5.0_rc2.ebuild,
  files/pmacct-0.12.0-gentoo.patch, files/pmacctd-init.d:
  Version bump. Clean up patch. Use /run not /var/run in init script.

  01 Feb 2014; Jeroen Roovers <jer@gentoo.org> -pmacct-0.14.2.ebuild,
  pmacct-0.14.3.ebuild:
  Add dev-libs/geoip dependency (bug #499924 by Michael Rowell).

*pmacct-0.14.3 (09 May 2013)

  09 May 2013; Jeroen Roovers <jer@gentoo.org> +pmacct-0.14.3.ebuild:
  Version bump.

  03 Feb 2013; Agostino Sarubbo <ago@gentoo.org> pmacct-0.14.2.ebuild:
  Add ~ppc, wrt bug #453414

  22 Jan 2013; Jeroen Roovers <jer@gentoo.org> pmacct-0.14.2.ebuild:
  Install QUICKSTART too.

*pmacct-0.14.2 (21 Jan 2013)

  21 Jan 2013; Jeroen Roovers <jer@gentoo.org> -pmacct-0.12.5-r1.ebuild,
  -files/pmacct-0.12.5-sin6_addr.patch, -pmacct-0.14.0.ebuild,
  +pmacct-0.14.2.ebuild, metadata.xml:
  Version bump.

  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org> pmacct-0.14.1.ebuild:
  Stable for x86, wrt bug #441430

  14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> pmacct-0.14.1.ebuild:
  Stable for amd64, wrt bug #441430
