@@ -1,13 +1,13 @@
-DEFINED_PHASES=compile install postinst preinst prerm setup unpack
-DEPEND=>=virtual/jdk-1.4 !client-only? ( >=app-admin/webapp-config-1.50.15 ) dev-java/commons-cli:1 dev-java/itext:0 sci-libs/jmol-acme:0 sci-libs/vecmath-objectclub:0 >=dev-java/java-config-2.1.9-r1 >=sys-apps/portage-2.1.2.7 >=dev-java/ant-core-1.8.2 >=sys-apps/portage-2.1.2.7 >=dev-java/javatoolkit-0.3.0-r2
+DEFINED_PHASES=compile configure install postinst preinst prepare prerm setup
+DEPEND=>=virtual/jdk-1.4 !client-only? ( >=app-admin/webapp-config-1.50.15 ) dev-java/commons-cli:1 dev-java/itext:0 sci-libs/jmol-acme:0 sci-libs/vecmath-objectclub:0 >=dev-java/java-config-2.1.9-r1 >=dev-java/ant-core-1.8.2 >=dev-java/javatoolkit-0.3.0-r2
 DESCRIPTION=Java molecular viever for 3-D chemical structures
-EAPI=1
+EAPI=5
 HOMEPAGE=http://jmol.sourceforge.net/
 IUSE=client-only vhosts elibc_FreeBSD elibc_FreeBSD
 KEYWORDS=~amd64 ~x86
 LICENSE=LGPL-2.1
-RDEPEND=>=virtual/jre-1.4 dev-java/commons-cli:1 dev-java/itext:0 sci-libs/jmol-acme:0 sci-libs/vecmath-objectclub:0 >=dev-java/java-config-2.1.9-r1 >=sys-apps/portage-2.1.2.7
+RDEPEND=>=virtual/jre-1.4 dev-java/commons-cli:1 dev-java/itext:0 sci-libs/jmol-acme:0 sci-libs/vecmath-objectclub:0 >=dev-java/java-config-2.1.9-r1
 SLOT=0
 SRC_URI=mirror://sourceforge/jmol/Jmol-12.0.45-full.tar.gz http://dev.gentoo.org/~jlec/distfiles/jmol-selfSignedCertificate.store.tar
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	java-ant-2	5f5bada6517ed26bc25083134e42b146	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f	webapp	25b9b1696f5e698711f47d45c3d45e3e
-_md5_=023b118e906a4a39deca185eade18d75
+_md5_=18992da4ae093935b9f589cd019fb1c8
