@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX 12.0.45/jmol-manifest.patch 3726 SHA256 74cdf274352161ffdf155b34b8d9110dad9c4a15720467f73d301104005566bd SHA512 016e57a3c3e55d89fe2a72447160c0b6359affec305c6b4949892ddec3b4a648bad96b87ff0aa5cb0c5187f59e825b441cbbe60e6936a14df536ed0095f67112 WHIRLPOOL abb250bc77d15a5f3e0a441dd0ffd8809642d8959f896c1ae394b85695b74bd4578013ad99b38abca822ad5db514562b121ad6b2f0265090653d7e359ee85a2f
 AUX 12.0.45/jmol-nointl.patch 13315 SHA256 6bbf13c59bc3633dc089346c1133ad2b3d0614463abdf364f5ec2e2ccd658df0 SHA512 deb54c7f94e3fd4b43a701d58c992edbc80f650397feea97594a8f00cdc14463a19e2314fa616fb3a0ca42af8b70770c0426b8eacfe1d81a30b53c566e6342c0 WHIRLPOOL 570e359517e1011ba76447161e6c03925db0e6533d262f11f13d9553f75989faa27a0ae5f39352dad19ec53e804e8e39e76bbc79f1b44b495fe948e7b8633472
@@ -8,27 +8,29 @@ AUX index.html 328 SHA256 8cba2c5eb7f25c0ecf23bc007eb61549a7d2177ac327db6c1e5f51
 AUX jmol-11.0.3-manifest.patch 3726 SHA256 74cdf274352161ffdf155b34b8d9110dad9c4a15720467f73d301104005566bd SHA512 016e57a3c3e55d89fe2a72447160c0b6359affec305c6b4949892ddec3b4a648bad96b87ff0aa5cb0c5187f59e825b441cbbe60e6936a14df536ed0095f67112 WHIRLPOOL abb250bc77d15a5f3e0a441dd0ffd8809642d8959f896c1ae394b85695b74bd4578013ad99b38abca822ad5db514562b121ad6b2f0265090653d7e359ee85a2f
 AUX jmol-11.0.3-nointl.patch 11109 SHA256 56ad460779a0ecfb90ad61cf4cfae2fad9b017f9f78581a720241e4ea208b49a SHA512 0fe07fb53d989298f7395be39c6ee75f56ab59fc096e956d8481c38581706b17f799e745fcd5b6652c4f1115d4425e7ff9ebef454b606d8de7829e07e26b27e2 WHIRLPOOL daf992208b99fec51f5f0b26ca22d520ebd820a22d439c7baa2b84f2b4b3829ac7139d7d3c48076dd4681af1296fd5e61badd91332efa03cc97e58027b21697a
 AUX jmol-12.2.27-nointl.patch 13821 SHA256 330a911405f00552d37a9c241c4a18b9d3e6812ce858933dbc4574df8248e345 SHA512 6ad196dfd6d38a086fad461f8170340f8ef3beb7ae69916e0285d8e30ce8a40efc278e461a3d0ae0da71611529f4a0e58c9a73336319764b1fef62d75336a8dc WHIRLPOOL 94be437d33ec73ed53c8461e78a7799c2aa34c9b606e309554da191ff74a465fe2243f4953a615aca790d3558e2b69b7edd122526f900475f5b05bb20d98d0fe
-DIST Jmol-12.0.45-full.tar.gz 26501382 SHA256 f9a3fe242841f9b56a718f8da2efe4130e497afe2c12d77f2e68344c62d7f70e
-DIST Jmol-12.2.27-full.tar.gz 29493780 SHA256 f2ca3b810ea16a488f6f57003d2a407c8ac040d610479a7ae6d95631157db801
-DIST jmol-selfSignedCertificate.store.tar 10240 SHA256 416744934991ef4f1fa298c0afc8e855d43771de2f2278ed3fbc60f707ea46b2
-EBUILD jmol-12.0.45.ebuild 3056 SHA256 b63d9a7088a700493c5700ba87d6a7887655e9e1494af9bec0837c248d848f82 SHA512 27dd4e1d1f29d6153d666b363b5b246bf1e61198e428c49413d504d9b9d29b035f3f71fd39ec73943397ddef932a63fd511857d2d86dd1b7cdb0ab2328756814 WHIRLPOOL 4c286f8748058449aa2a5507aadfe56333666df66e9fd123be455eee3a79e227461b92b822d074e8ff5b79abe4a0ebeddc75bc04691b83e6a92fd5c14768ca68
-EBUILD jmol-12.2.27.ebuild 2917 SHA256 fcad56eb690ffe302baaa7da4d584fba8488ed756b624754f845049917d13a8c SHA512 8ecebcac146de51db9ae591eecb030e499e0321737b227dc7b280743699ba9a6b17dd1edb089d930665d2df73b359a431946fb10d3eaefde96df5d6342f1f819 WHIRLPOOL f44495e18efcc72b6a752a27b6b1d18bc529c6906d1d0dd8fab9eb0f1dbd43bc852e2205661bd55551a305d0f2b1c8af537ba4a17d129b31c99904c515c41812
-MISC ChangeLog 2732 SHA256 3e68f1e1c346495914f39c77c261b6b83d8980a9c6245ae8c79d5433bc43ceba SHA512 f8a222ff449717affcc0eb9d2a58bd5fbd1d6c98226045576bb728dd0d85495fef9520ff524f56ce386bce682f49a18725cac52adf9614f572470b74e2e0579c WHIRLPOOL a3d86d3bed61b10f5a3f4c61caf3e85f643b17a0b68478ac6e8f79e4ef4576fbed1d4d68ac82c43ba9f36955387ff97f4bfda90fcf6324fb0b0c76b25f387f17
+DIST Jmol-12.0.45-full.tar.gz 26501382 SHA256 f9a3fe242841f9b56a718f8da2efe4130e497afe2c12d77f2e68344c62d7f70e SHA512 b0e999335c039e5bde5e261c076f3eb75dd0c33a351445d5c086995d32b3fd03795b3a11dc57a06bf8ac39e74945f3c9f4547ecfbf18b56d827b9a42f5208c11 WHIRLPOOL d0bbae1fc5c96ddfb4dd29f6e09701e496a333a2f44ba266e2a24c60de2d36d73c2184bd9b8f6054b0955535d49856154d6101644ef0297b825c4f6745cfe3bb
+DIST Jmol-12.2.27-full.tar.gz 29493780 SHA256 f2ca3b810ea16a488f6f57003d2a407c8ac040d610479a7ae6d95631157db801 SHA512 a8608e64dc06b6d3b0cb7e911f0a224456a65bdc15c51d6b420ee6abf8d82cdcec9f54f6b1a51cfe032e2e074f173f50a88bcff783311de19ce9b95ad990ebca WHIRLPOOL ae0826eab7eb364acb4f30eb77850450b871a24d8940eaabaf8fe9f3770efc39deb604e3c5f875a695c0d33b516ad47d523982c7a6460f2421f961f50a7680bf
+DIST jmol-selfSignedCertificate.store.tar 10240 SHA256 416744934991ef4f1fa298c0afc8e855d43771de2f2278ed3fbc60f707ea46b2 SHA512 2c3e9d1183a0b174273346d0fba0729caa415ef53fe01629a4c47daa2393c9e18ca3f57984911e6340197429cf0ee581c64bb9b6072db902102976030d9f2c23 WHIRLPOOL 79dc2b2c95b304569f44bb986af3aa25150b0c5f8a9fc9b1698a979647800e60d0f20a7a4abbc89533a21f3d7f4b93a430840eed71bbe04b1cc0bdbcfae7fe63
+EBUILD jmol-12.0.45-r1.ebuild 3040 SHA256 b5dc18b5e4f4ad0d4a024c8880ebe424db888ea00bef61d048495efe4aa8fa12 SHA512 7e2ca24e30ac469921da38d0e4090da46c191492ba586df1b09d203c6666ef69d268589e14824c49d6cf402ffce3953372be3b5d1b44dabc699378233fb7dff7 WHIRLPOOL 4f428b1c221bb63e9ab5b8d9186ccaae8638e2f779c503ce4281ea9b90f2b4347e854416742d8db5a564d2f1b4f0ea22b58c3937bce2ab00923a1f26a109464f
+EBUILD jmol-12.2.27-r1.ebuild 2900 SHA256 2ad2bf5c24ce8695becf38095cb035726b126466dc0bcb9e22dbdb6a1ebfbb37 SHA512 3f341dd429bc363b60737e48d0fe5513e41c60bc0312aa63a910b5a6a71fbafdcadde3278442c345aeb27c6194a2143d21a17ffab9fd8d12832126ffa10d7ec1 WHIRLPOOL 630bcf734aad040a97f1728c4a37a55d1d7c60a540203fd36bac4917c7fa52530f93ab82c483621170b20df0c1bd53cd9efc8d05ea8bd0366cf352d69c778804
+MISC ChangeLog 2982 SHA256 bf3153e33aa2d74e25570ecf4fec84e9bee42ad661c18791e1aacdb1e17e1f1a SHA512 fed110fe8de1074909ef53be8d8eb9f576946987e98cccb44540cedd990c37dd85dac54c2af67ba3c460b3a0c083582c883b621d8fe8c8a21b464eb3f3cdff10 WHIRLPOOL 6f7dc08ffcf2644bd452668f256f93f3fad41908fe5ae65cdc3230175fdaab984b82a25103e3181afa427a50ced58f278b2642439dbe3f894c6bbf268008e332
 MISC metadata.xml 375 SHA256 350185fefb6cb6a2f75b8a1bf43e8c5711d337b2764d1c6416a9e1196e807c2d SHA512 9a3fc8e4cb347ccf47695e48bd15fd9aae9f89a65da617aee46f9584e82d14dadfc6c8a6cf8f75311e29251f9cb0b764de47308b0cac02ace424977334d15d3a WHIRLPOOL db08de8e77110061ab04a82386aeb21c0d2e7a588cb6c62a452ece08a1d51852d0fbb68ee4fa5f3a5853fa7cd36aaeda77290a582a1ac092a4ce99d83493d177
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQIcBAEBCgAGBQJSBNj5AAoJELnU8jG9FVir+SsP/AlhcR4LSJEwHzq5Qw05O79Q
-R6b9gHUO/yXtTnW2b9ACware5bIg1AN5VVBd2HOmqlgn8pU+o6/QAJsBmPaLeyGQ
-OnNLBobHR2g4sbdVQySvnru53M6Rv2rKALgKCdkhlZviGqJWsGvLNA3DUZzU0Ied
-BjcBe9Luk5xmjTGV9Q1QGmKln53YjEwzk9BO9zTlgJKUkiXWnw34fsnLYSyBHVlB
-+cDX7ZmmzQycIjFFRNDMHBB0zAuTLQY7wD+o7NYZLQEO0n4QDug0pQnYN79dinov
-l3X+E3UsTVVh7UJ34s4BELqsKDHlIM9OrsyIvPh7Nsmo661qoe83Jcve5Fdt7QdX
-4ve536YV3PttQF/m5NohYmTaBDcN+7v79NPyyhfK1TtjudALHbMSgDf91cJL8EqV
-99WBegSrt2jf2HDqUUl7pZ7MGKxTHrt8B733daFjKqek/sLcySmF/ey4PWpRkOs6
-5P+lt9wjPTTtb/tD7xy9Cpz/36Au4nvdOK4yDiJjtzHhOXbs7fHjTiQNozZPTzCC
-fUqb15+OzlgcdSE7BsDMjhUi4QBoDO1ISlZwBCCvWApbH9wHgcd4U6BIweBotCan
-V4fW7xTzf39H6zgkjJuoWmIoNgwswh/6vV6Yn6LztvATQvhrWjRG8MT4yuSkgfO8
-HolRH3/9iQHZpsUEc0AA
-=DKCQ
+iQJ8BAEBCABmBQJT4nunXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQxMzgwNDhGMjg4MzhERTE1NTY2NjA4MkZE
+MUJBQjZCNTI4REIwMjlDAAoJENG6trUo2wKcUtkP/A4DDVgriTIg91CE6qy/xH4Q
+HMzTu6G/GhEokM8NfIryKrubWdkYZIlR2X3avA7YwtBYfgZL203aYD6/9ug5C329
+FXGr8V4Xk/Ea81S8fCCRdD0piHtWqoNO/e/NPJjHTiJUwp3iII3dPyyAXxBvaSL7
+h+IjMPhpEOKGW7SBxRIDTi2YIuhntW7OjOJ5iOdzaTnCGGOpHbZKAGQ4j+HkTpol
+EFj3U0kcLuupXeqpxRIVtTXQQfeFWDLwRWvEtJcus0X3jUVpjUqpUb6Db+EqZBbC
+3ZRTzNDb3YhxmDH6cMma3uzy1j8p0Rsdk6GV4fUvM4/aHxUXuRy0jDeENsVcF/F7
+vpWvTa7gV7obw9SmrmXXFLxOduoUoNM5aZySOMwp0zJC20LhkiEuoVN/ZW7vw8u3
+czOvSG+HRWbLrGyOaanOTwnbEVPLsyPt+3ClcV8A3RFotTB/t2PrD9isZ63KC5G/
+7aAKucxmm0HjY6JPz6yjDzIYI477hx/DGJ1ltO55Hyeb03JUM3WLyfrmlsavGUAl
+Wdxyt+TMa75StYoBfhnXvR7HHtErcVzzQBcJs6ejNjGhbDhHA44EGYvamk4KsG7i
+akTQP9hEtNd1mTrZckW4Rd6NXWAf8ckK+TsmKJfvXwonbv1l2+5FYtSFwXOdK4/4
+BsrXxOJbHoTp6GOoiBde
+=Lb08
 -----END PGP SIGNATURE-----
