@@ -1,6 +1,13 @@
 # ChangeLog for sci-chemistry/jmol
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/jmol/ChangeLog,v 1.16 2013/08/09 11:56:40 jlec Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/jmol/ChangeLog,v 1.17 2014/08/06 19:01:49 creffett Exp $
+
+*jmol-12.0.45-r1 (06 Aug 2014)
+*jmol-12.2.27-r1 (06 Aug 2014)
+
+  06 Aug 2014; Chris Reffett <creffett@gentoo.org> +jmol-12.0.45-r1.ebuild,
+  +jmol-12.2.27-r1.ebuild, -jmol-12.0.45.ebuild, -jmol-12.2.27.ebuild:
+  [QA] EAPI/revision bump, drop old
 
   09 Aug 2013; Justin Lecher <jlec@gentoo.org> -jmol-11.0.3-r1.ebuild,
   jmol-12.0.45.ebuild, jmol-12.2.27.ebuild, metadata.xml:
@@ -70,4 +77,3 @@
   +files/caffeine.xyz, +files/index.html,
   +files/selfSignedCertificate.store, +jmol-11.0.3.ebuild:
   Initial import of jmol-11.0.3.
-
