@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/pmacct
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/pmacct/ChangeLog,v 1.96 2014/08/05 16:36:59 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/pmacct/ChangeLog,v 1.97 2014/08/06 19:52:46 jer Exp $
+
+  06 Aug 2014; Jeroen Roovers <jer@gentoo.org> pmacct-1.5.0_rc3.ebuild:
+  Add virtual/pkgconfig to DEPEND.
 
   05 Aug 2014; Jeroen Roovers <jer@gentoo.org> pmacct-1.5.0_rc3.ebuild,
   +files/pmacct-1.5.0_rc3-mongodb.patch:
